[package]
name = "filescraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir="2.4.0"
rayon = "1.8.0"
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
anyhow = "1.0.78"
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.23"
atomic-counter = "1.0.1"
indicatif = { version = "0.17.3", features = ["rayon"] }
colorful = "0.2.2"